# llmbot_ws

src/DefBT/: CMakeLists.txt  package.xml  temp
src/DefBT/Tree/: bt_gen.xml
src/DefBT/src/: behavior.cpp  simple_bt.cpp
src/bt_check/: package.xml  setup.cfg  setup.py
src/bt_check/bt_check/: bt_client.py  bt_serv.py  check_bt.py  input.txt  valid_format.py
src/cust_com/: CMakeLists.txt  package.xml
src/cust_com/srv/: RunTree.srv  XmlTree.srv
